temp. disabling jms tests