@@ -99,6 +99,25 @@
         <directory>src/test/resources</directory>
       </testResource>
     </testResources>
+     <pluginManagement>
+      <plugins>
+     	<plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.6</version>
+          <configuration>
+            <includes>
+              <include>**/*Test.java</include>
+            </includes>
+            <excludes>
+              <exclude>**/*AbstractTest.java</exclude>
+              <exclude>**/*JMSTest.java</exclude>
+            </excludes>
+            <argLine>-Xmx1024m -XX:MaxPermSize=128m</argLine>
+          </configuration>
+        </plugin> 
+      </plugins>
+     </pluginManagement>
   </build>
 
   <profiles>
